package com.randioo.owlofwar_server_simplify_protobuf.protocol;
import "Game.proto";

message RoleData{
	optional int32 roleId = 1;
	optional string name =2;
	repeated CardData cardDatas = 3;
	repeated CardListData cardListDatas = 4;
	//是否在战斗中
	optional bool inFight = 5;
	optional int32 currentChapterId = 6;
}

message CardData{
	optional int32 cardId = 1;
	optional int32 lv = 2;
	optional int32 num = 3;
}

message CardListData{
	optional int32 cardListIndex =1;
	optional int32 mainId = 2;
	repeated int32 cardIds = 3;
}

message FightCard{
	optional int32 cardId = 1;
	optional int32 lv =2;
}

message RoleResourceInfo{
	optional string name =1;
	optional int32 fightPoint = 2;
	//主帅
	optional FightCard generalCard = 3;
	repeated FightCard handCards =4;
	optional string corpName = 5;
	optional int32 mainLv = 6;
	optional int32 playerId = 7;
	optional int32 campId = 8;
}

message Frame{
	optional int32 frameIndex = 1;
	repeated GameAction gameActions= 2;		
}

enum GameResult{
	WIN = 1;
	LOSS = 2;
	DOGFALL = 3;
}

message StoreRoleResourceInfos{
	optional int32 myPlayerId = 1;
	repeated RoleResourceInfo roleResourceInfo = 2;
	optional bool isNPCGame = 3;
	optional int32 NPCMapId = 4;
}

message StoreFrames{
	repeated Frame frames = 1;
}

message MatchRoleInfo{
	optional string name = 1;
	optional int32 heroId = 2;
	optional int32 point = 3;
}

enum MarketItemDataBuyType{
	GOLD = 1;
	MONEY = 2;
	RMB = 3;
}

message MarketItemData{
	optional int32 cardId = 1;
	optional int32 dayBuyCount = 2;
	optional MarketItemDataBuyType buyType = 3;
}

message WarChapterData{
	optional int32 chapterId = 1;
	optional int32 starCount = 2;
}

message WarBuildData{
	optional int32 buildId = 1;
	optional int32 starCount = 2;
}

enum FightType{
	PILLAGE = 1;
	WAR = 2;
}

message GameResultData{
	optional GameResult gameResult = 1;
	optional FightType fightType = 2;
	optional int32 starCount = 3;
	optional int32 buildId = 4;
}

message GameResultAwardData{
	optional int32 point = 1;
	repeated CardData cardDatas = 2;
	optional int32 money = 3;
}

enum RoleInfoType{
	INFO_MONEY = 1;
}